--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Ignorar el directorio node_modules
+node_modules/
+package-lock.json
+.env
+# Ignorar archivos generados por el sistema operativo
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
